--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,6 +1,7 @@
 .map {
   background-image: url("../img/bg-map-mobile@1x.png");
   background-position: 50% 100%;
+  background-color: #eae6dd;
   box-sizing: border-box;
   height: 200px;
   margin: 0;
@@ -43,8 +44,8 @@
   }
 }
 
-@media (min-width: 1200px) and (min-resolution: 144dpi),
-  (min-width: 1200px) and (min-resolution: 1.5dppx) {
+@media (min-width: 960px) and (min-resolution: 144dpi),
+  (min-width: 960px) and (min-resolution: 1.5dppx) {
   .map {
     background-image: url("../img/bg-map-desktop@2x.jpg");
   }
