--- a/source/less/blocks/review.less
+++ b/source/less/blocks/review.less
@@ -92,10 +92,11 @@
   .review__wrapper {
     margin: 0 auto;
     padding: 0;
-    padding-bottom: 20px;
+    padding-bottom: 21px;
   }
 
   .review__list {
+    margin: 0 auto 32px;
     width: 640px;
   }
 
@@ -142,7 +143,7 @@
   }
 
   .review__toggles {
-    margin: 33px auto 1px;
+    margin: 0 auto 1px;
   }
 }
 
@@ -170,6 +171,8 @@
 
   .review__wrapper {
     padding-bottom: 0;
+    position: relative;
+    width: 948px;
   }
 
   .review__list {
