--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -50,17 +50,18 @@
 
 @media (min-width: @tablet-width) {
   .social {
-    margin: 0 15px 0 0;
+    justify-content: center;
+    margin: 0 14px 0 0;
+    width: auto;
+  }
+
+  .social__item {
+    margin: 5px 9px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .social {
-    margin-left: 32px;
-    width: 190px;
-  }
-
-  .social__item {
-    margin: 0 9px;
+    margin-left: 27px;
   }
 }
