--- a/source/less/blocks/form-competition.less
+++ b/source/less/blocks/form-competition.less
@@ -102,8 +102,14 @@
     border: 2px solid #283645;
   }
 
+  &:focus {
+    border: 2px solid #283645;
+    outline: none;
+  }
+
   &:active {
     border: 2px solid #d22856;
+    outline: none;
   }
 }
 
@@ -142,11 +148,19 @@
 }
 
 .form-competition__checkbox {
-  display: none;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  position: absolute;
+  width: 1px;
 }
 
 .form-competition__radio {
-  display: none;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  position: absolute;
+  width: 1px;
 }
 
 .form-competition__item-label {
@@ -194,6 +208,10 @@
   border: 2px solid #283645;
 }
 
+.form-competition__checkbox[type="checkbox"]:focus ~ .form-competition__item-label--checkbox::before {
+  border: 2px solid #283645;
+}
+
 .form-competition__checkbox[type="checkbox"]:active ~ .form-competition__item-label--checkbox::before {
   border: 2px solid #d22856;
 }
@@ -205,6 +223,10 @@
 }
 
 .form-competition__radio[type="radio"]:hover ~ .form-competition__item-label--radio::before {
+  border: 2px solid #283645;
+}
+
+.form-competition__radio[type="radio"]:focus ~ .form-competition__item-label--radio::before {
   border: 2px solid #283645;
 }
 
@@ -241,6 +263,20 @@
   margin: 0 auto;
   padding: 15px 20px;
   width: 237px;
+
+  &:hover {
+    border: 2px solid #283645;
+  }
+
+  &:focus {
+    border: 2px solid #283645;
+    outline: none;
+  }
+
+  &:active {
+    border: 2px solid #d22856;
+    outline: none;
+  }
 }
 
 .form-competition__bottom {
