--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -63,12 +63,12 @@
   width: 50px;
 }
 
-.main-nav--closed .main-nav__toggle:active::before {
+.main-nav--closed .main-nav__menu:active::before {
   background-color: rgba(210, 40, 86, 0.3);
   box-shadow: 0 10px 0 0 rgba(210, 40, 86, 0.3), 0 20px 0 0 rgba(210, 40, 86, 0.3);
 }
 
-.main-nav--closed .main-nav__toggle:hover::before {
+.main-nav--closed .main-nav__menu:hover::before {
   background-color: #d22856;
   box-shadow: 0 10px 0 0 #d22856, 0 20px 0 0 #d22856;
 }
@@ -113,10 +113,6 @@
   }
 }
 
-.main-nav--nojs .main-nav__menu {
-  display: none;
-}
-
 .main-nav__top {
   align-items: center;
   background-color: #283645;
@@ -140,13 +136,10 @@
 
 .main-nav__list {
   background-color: #283645;
+  display: block;
   list-style: none;
   margin: 0;
   padding: 0;
-}
-
-.main-nav--nojs .main-nav__list {
-  display: block;
 }
 
 .main-nav__item {
@@ -183,6 +176,14 @@
 
 .main-nav__glasses-tablet {
   display: none;
+}
+
+.main-nav--nojs .main-nav__menu {
+  display: none;
+}
+
+.main-nav--nojs .main-nav__list {
+  display: block;
 }
 
 @media (min-width: @tablet-width) {
@@ -247,7 +248,7 @@
     flex-wrap: wrap;
     padding: 8px 0;
     margin: 0 auto;
-    width: 938px;
+    width: 958px;
   }
 
   .main-nav__menu {
@@ -273,7 +274,7 @@
     list-style: none;
     margin: 23px 0;
     padding: 0;
-    width: 619px;
+    width: 639px;
   }
 
   .main-nav--nojs .main-nav__list {
@@ -283,7 +284,7 @@
   .main-nav__item {
     border: none;
     line-height: 18px;
-    margin: 0;
+    margin: 0 10px;
     padding: 14px 0;
     text-transform: none;
     width: auto;
@@ -297,8 +298,11 @@
     background-color: transparent;
   }
 
+  .main-nav__logo {
+    margin-left: 13px;
+  }
+
   .main-nav__logo-image {
-    margin-left: 3px;
     margin-top: -18px;
   }
 
