--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -86,7 +86,7 @@
 
 @media (min-width: @tablet-width) {
   .page-footer {
-    padding: 35px 0;
+    padding: 34px 0;
 
     &--mobile-hidden {
       display: block;
@@ -110,7 +110,7 @@
 
 @media (min-width: @desktop-width) {
   .page-footer {
-    padding: 72px 0;
+    padding: 70px 0;
   }
 
   .page-footer__wrapper {
@@ -120,7 +120,7 @@
   .page-footer__credits {
     font-size: 18px;
     line-height: 18px;
-    margin-top: 0;
+    margin-top: 14px;
   }
 
   .page-footer__logo {
