--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -8,9 +8,9 @@
     background-image: url("../img/bg-triangle-white-footer.svg");
     background-size: contain;
     background-repeat: no-repeat;
-    bottom: -79px;
+    bottom: -100px;
     content: "";
-    height: 80px;
+    height: 100px;
     left: 0;
     margin: 0 auto;
     padding: 0;
@@ -33,7 +33,7 @@
     padding-top: 47px;
 
     &::after {
-      bottom: -129px;
+      bottom: -130px;
       height: 130px;
     }
   }
@@ -50,6 +50,7 @@
     padding-top: 65px;
 
     &::after {
+      background-image: url("../img/bg-triangle-white-footer-desktop.svg");
       bottom: -400px;
       height: 400px;
     }
